Add JPA repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql:postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=andrzej
+spring.datasource.password=password
