Add post /create with redirect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.datasource.url=jdbc:postgresql:postgres
+spring.datasource.url=jdbc:postgresql:flashcard
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=andrzej
-spring.datasource.password=password
+spring.datasource.username=tomspencer
