Undo edit on .properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:postgresql:flashcard
+spring.datasource.url=jdbc:postgresql:postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=tomspencer
+spring.datasource.username=andrzej
+spring.datasource.password=password
