--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 
     <properties>
         <java.version>21</java.version>
+        <sonar.organization>andrzejp</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencyManagement>
